--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Bridge Game/library/
-Bridge Game/Library/
+*/[Ll]ibrary/
+Bridge Game/[Ll]ibrary/
 Bridge Game/[Tt]emp/
 Bridge Game/[Oo]bj/
 Bridge Game/[Bb]uild/
